--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
   <a href="./jclsengine/docs/index.html" target="_blank" rel="noopener noreferrer">
     Documentation for JCLS Engine
   </a>
+
   <a href="./GithubPage/index.html" target="_blank" rel="noopener noreferrer">
     Game
+  </a>
+
+  <a href="https://www.twitch.tv/jecodelesoir" target="_blank" rel="noopener noreferrer">
+    Twitch Channel of the creator
   </a>
 
 </body>
