--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     Documentation for JCLS Engine
   </a>
 
+  <a href="https://github.com/JeCodeLeSoir/pioupiou/" target="_blank" rel="noopener noreferrer">
+    Github
+  </a>
+
   <a href="./GithubPage/index.html" target="_blank" rel="noopener noreferrer">
     Game
   </a>
