--- a/index.html
+++ b/index.html
@@ -13,23 +13,40 @@
 
 <body>
 
-  <a href="./jclsengine/docs/index.html" target="_blank" rel="noopener noreferrer">
+  <div>
+    <h1>JeCodeLeSoir</h1>
+    <h2>Game Engine</h2>
+  </div>
+
+  <a href="./jclsengine/docs/index.html" target="_blank">
     Documentation for JCLS Engine
   </a>
 
-  <a href="https://github.com/JeCodeLeSoir/pioupiou/" target="_blank" rel="noopener noreferrer">
+  <a href="./Tools/SpriteEditor/" target="_blank">
+    Tools SpriteEditor
+  </a>
+
+  <a href="./Tools/TimeLine/" target="_blank">
+    Tools TimeLine
+  </a>
+
+  <a href="./Tools/SceneEditor/" target="_blank">
+    Tools SceneEditor --> Not working
+  </a>
+
+  <a href="https://github.com/JeCodeLeSoir/pioupiou/" target="_blank">
     Github
   </a>
 
-  <a href="./GithubPage/index.html" target="_blank" rel="noopener noreferrer">
+  <a href="./GithubPage/index.html" target="_blank">
     Game
   </a>
 
-  <a href="https://jecodelesoir.itch.io/pioupiou" target="_blank" rel="noopener noreferrer">
+  <a href="https://jecodelesoir.itch.io/pioupiou" target="_blank">
     Itch.io
   </a>
 
-  <a href="https://www.twitch.tv/jecodelesoir" target="_blank" rel="noopener noreferrer">
+  <a href="https://www.twitch.tv/jecodelesoir" target="_blank">
     Twitch Channel of the creator
   </a>
 
