--- a/game/index_for_page.html
+++ b/game/index_for_page.html
@@ -22,8 +22,10 @@
     <button id="btn-run">Run</button>
   </div>
 
-  <canvas>
-  </canvas>
+  <div class="game">
+    <canvas>
+    </canvas>
+  </div>
 
   <script type="importmap">
     			{
