--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     Github
   </a>
 
-  <a href="./GithubPage/index.html" target="_blank">
+  <a class="game" href="./GithubPage/index.html" target="_blank">
     Game
   </a>
 
