--- a/Tools/SpriteEditor/index.html
+++ b/Tools/SpriteEditor/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="menu-generator">
 
-    <form id="col-lig-form-gen" class="RectInfos hide">
+    <form id="info-form" class="RectInfos hide">
 
       <h3>
         Rectangle Info
@@ -27,6 +27,8 @@
       <input type="number" id="px" placeholder="pivot_x" value="0">
       <input type="number" id="py" placeholder="pivot_y" value="0">
 
+      <input type="number" id="pxa" placeholder="pivot_x" value="0">
+      <input type="number" id="pya" placeholder="pivot_y" value="0">
     </form>
 
     <form id="col-lig-form-gen">
