--- a/Tools/SpriteEditor/index.html
+++ b/Tools/SpriteEditor/index.html
@@ -27,8 +27,8 @@
       <input type="number" id="px" placeholder="pivot_x" value="0">
       <input type="number" id="py" placeholder="pivot_y" value="0">
 
-      <input type="number" id="pxa" placeholder="pivot_x" value="0">
-      <input type="number" id="pya" placeholder="pivot_y" value="0">
+      <input type="number" id="pxa" placeholder="pivot_x" value="0" readonly>
+      <input type="number" id="pya" placeholder="pivot_y" value="0" readonly>
     </form>
 
     <form id="col-lig-form-gen">
