--- a/Tools/SpriteEditor/index.html
+++ b/Tools/SpriteEditor/index.html
@@ -18,6 +18,8 @@
         Rectangle Info
       </h3>
 
+      <input type="text" id="name" placeholder="name">
+
       <input type="number" id="w" placeholder="width" value="0">
       <input type="number" id="h" placeholder="height" value="0">
 
