--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <link rel="stylesheet" href="css/newstyle.css">
+
   <title>Document</title>
 </head>
 
